# open_code

./: .gitignore  Makefile  PracticeMakefile  docker-compose.yaml
discount_service/: Dockerfile  Makefile  pyproject.toml
discount_service/src/app/: main.py
docs_domain/: setup.py
docs_domain/docs/: DOMAIN.md  SPECIFICATION.md
docs_domain/docs/source/: HOW_TOCONTRIBUTE.rst  QUICKSTART.md  conf.py  index.rst
docs_domain/docs/source/api/: modules.rst  sales.rst
docs_domain/src/: sales.py
docs_domain/src/sales.egg-info/: PKG-INFO  SOURCES.txt
docs_domain/tests/: test_sales.py
file_exchanger/docs/: ContextDiagram.drawio  SeauenceDiaram.drawio  UseCases_BasicTransfer.drawio
linux_as_execenv/: pinger.py
my_framework/: Makefile  README.md  pyproject.toml
my_framework/src/wsgi_zpenr/: app.py
my_framework/src/wsgi_zpenr/static/: main.css
order_service/: Makefile  pyproject.toml
order_service/src/app/: database.py  main.py  settings.py
product_service/: Dockerfile  pyproject.toml
product_service/src/app/: main.py
product_service/testing/src/: math_demo.py
product_service/testing/test/: test_principles.py
testing/src/: math_demo.py
testing/test/: test_principles.py
testing_tdd/: Makefile  requirements.txt  setup.py
testing_tdd/src/: ndfl.py
testing_tdd/tests/: test_ndfl_basic.py
wsgi/: app.py
