[project]
name = "discount-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Myasnikov Vadim",email = "zpenr@bk.ru"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
