[project]
name = "order-service"
version = "0.1.0"
description = "Application for serving user's orders"
authors = [
    {name = "Myasnikov Vadim",email = "zpenr@bk.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
